--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,8 @@
     "no-unused-expressions": "off",
     "react/jsx-props-no-spreading": "off",
     "@typescript-eslint/camelcase": "off",
+    "no-return-assign": "off",
+    "no-param-reassign": "off",
     "@typescript-eslint/explicit-function-return-type": [
       "error",
       {
